--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "devstart": "nodemon debug ./bin/www"
+    "devstart": "nodemon ./bin/www",
+    "debug": "DEBUG=express:* nodemon ./bin/www"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
