--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,23 @@ config/
 # ignore log files
 log/
 *.log
+
+# OS generated files
+####################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Generated CSS output
+#######################
+public/stylesheets/*.css
+public/stylesheets/*.css.map
+
+# Package dependencies
+######################
+node_modules/
+bower_components
