--- a/package.json
+++ b/package.json
@@ -22,9 +22,18 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
-    "serve-favicon": "~2.4.5"
+    "rotating-file-stream": "^1.3.5",
+    "serve-favicon": "~2.4.5",
+    "winston": "^2.4.1"
   },
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-jshint": "^2.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.2.1",
+    "gulp-uglify": "^3.0.0",
+    "jshint": "^2.9.5",
     "nodemon": "^1.17.2"
   }
 }
